# One-of-Twenty

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Entity.h  EntityManager.h  Game.cpp  Game.h  HUD_menu.json  Map_Elements.json  README.md  config.json  hud_menu_data.json  main.cpp  map_data.json  one_of_twenty.sln  one_of_twenty.vcxproj  one_of_twenty.vcxproj.filters
config/: config.json  map_data.json
src/: main.cpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.h
src/components/: CMakeLists.txt  Components_HUD.h
src/config/: config.json  map_data.json
src/entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/entity_manager/: CMakeLists.txt  EntityManager.cpp  EntityManager.h
src/game/: CMakeLists.txt  Game.cpp  Game.h
src/game_manager/: Game.cpp  Game.h
src/helpers/: CMakeLists.txt  Components.h  Components_Entities.h  GameClock.h  Logger.h  SharedContainer.h  ThreadSafeQueue.h  json.h  pch.cpp  pch.h
src/hud/: CMakeLists.txt  Hud.cpp  Hud.h
src/map_generator/: CMakeLists.txt  MapGenerator.cpp  MapGenerator.h
src/mapgen/: MapGenerator.cpp  MapGenerator.h
src/pch/: CMakeLists.txt  pch.h
